--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     height:100vh;
     width:100vw;
+    font-family: 'Quicksand';
 }
 
 .slogan-container{
@@ -13,6 +14,7 @@
 
 .slogan{
     color:#c79cdb;
+    font-weight: bold;
 }
 
 .game-type-container{
@@ -24,6 +26,9 @@
     margin-top:3%;
     margin-left: 15%;
     margin-right: 15%;
+    border-radius: 10px;
+    font-weight: bolder;
+    font-size:larger;
 }
 
 .solo{
@@ -31,6 +36,7 @@
     flex-direction: column;
     text-align: center;
     background-color: #FFAFCC;
+    align-items: center;
 }
 
 .duo{
@@ -38,6 +44,7 @@
     flex-direction: column;
     text-align: center;
     background-color: #CD84DB;
+      align-items: center;
 }
 
 .party{
@@ -45,18 +52,36 @@
     flex-direction: column;
     text-align: center;
     background-color: #A2D2FF;
+      align-items: center;
 }
 
 .title-solo{
     background-color: #FFAFCC;
     color:black;
+        font-size: 2rem;
+          margin-bottom: .25rem;
 }
 
 .title-duo{
     background-color: #CD84DB;
      color:black;
+     font-size: 2rem;
+     margin-bottom: .25rem;
 }
 
 .title-party{
     background-color: #A2D2FF;
+        font-size: 2rem;
+        margin-bottom: .25rem;
+}
+
+.dice-1, .dice-2, .dice-3{
+    height:200px;
+    width:200px;
+}
+
+.solo:hover .dice-1,
+.duo:hover .dice-2,
+.party:hover .dice-3 {
+  transform: translateY(-10px);
 }
