--- a/src/components/DuoGamePage/DuoGame.css
+++ b/src/components/DuoGamePage/DuoGame.css
@@ -1,12 +1,7 @@
-h1 {
-    color:#c79cdb;
-    font-weight: bold;
+.card-container{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 5%;
+    /* margin-left:1%;
+    margin-right:1%; */
 }
-
-.name{
-     color:#c79cdb;
-}
-
-.desc{
- color:#c79cdb;
-} 
