--- a/src/components/GameDetails/GameDetails.css
+++ b/src/components/GameDetails/GameDetails.css
@@ -1,3 +1,34 @@
-.game-details-container{
+.details-container{
     color:white;
+    margin:2em;
+    display:flex;
+    flex-direction: column;
+}
+
+.details-title-container{
+    margin-left:5em;
+}
+
+.details-title{
+   font-family: 'Quicksand', sans-serif;
+   color:#cd83db;
+   font-weight: lighter;
+}
+
+.game-details-container img {
+  filter: grayscale(80%); 
+  opacity: 0.4; 
+  margin-right: 1em;
+  height:70%;
+  width:30%;
+}
+
+.details-desc-container{
+    display:flex;
+    width:100%;
+}
+
+.deets-container{
+    display:flex;
+    flex-direction: row;
 }
