--- a/src/components/Games/Games.css
+++ b/src/components/Games/Games.css
@@ -23,6 +23,10 @@
   text-decoration: none;
 }
 
+.error-message {
+  color: #A2D2FF;
+}
+
 @media screen and (min-width: 95em) {
   .card-container {
     grid-template-columns: repeat(5, 1fr); 
