--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -5,6 +5,7 @@
     height:100vh;
     width:100vw;
     font-family: 'Quicksand';
+    background-color: black;
 }
 
 .slogan-container{
@@ -27,8 +28,13 @@
     margin-left: 15%;
     margin-right: 15%;
     border-radius: 10px;
-    font-weight: bolder;
     font-size:larger;
+}
+
+.game-title{
+    font-weight: normal;
+    font-size: 1.4em;
+    color:black;
 }
 
 .solo, .duo, .party {
