--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -28,6 +28,11 @@
   color: lightgray;
 }
 
+.error-message{
+  margin-left: 20px;
+}
+
+
 @media screen and (min-width: 768px) {
   #searchInput {
     width: 30%; 
